--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "expo": "~51.0.28",
+    "expo-image-picker": "~15.0.7",
     "expo-status-bar": "~1.12.1",
+    "firebase": "^10.14.1",
     "react": "18.2.0",
     "react-native": "0.74.5"
   },
